# AlphaKhulnasoft

./: .dockerignore  .env.example  .gitignore  404.html  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml  latest-changes.yml
alpha_khulnasoft/: evaluate_dataset.py  solve_dataset.py  solve_my_problem.py  solve_problem.py
alpha_khulnasoft/code_contests/data/: prepare_and_clean_dataset.py  provider.py
alpha_khulnasoft/code_contests/eval/: code_contests_metric.py  code_test_runners.py  local_exec.py  pass_at_k_evaluator.py  tracer.py
alpha_khulnasoft/litellm/proxy/: _types.py
alpha_khulnasoft/llm/: ai_handler.py  ai_invoker.py  token_handler.py
alpha_khulnasoft/settings/: config_loader.py  configuration.toml
alphakhulnasoft/: README.md  __init__.py  alpha_repair.py  benchmark.py  data_loader.py  dataset_gen.py  evaluator.py  llm.py  prompts.py  publisher.py  sandbox.py  visualizer.py
docs/: mkdocs.yml
docs/docs/: index.md
docs/overrides/partials/: footer.html
docs/site/: 404.html  CNAME  index.html
docs/site/search/: search_index.json
notebooks/: AlphaKhulnasoft_Demo.ipynb
tests/: test_evaluator.py  test_sandbox.py
tests/alpha_khulnasoft/code_contests/eval/: test_local_exec.py
